--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "@mui/styled-engine-sc": "^5.11.11",
@@ -21,6 +23,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "4.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
@@ -29,7 +32,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
